	PR tree-optimization/43074 	* tree-vectorizer.h (VECTORIZABLE_CYCLE_DEF): New. 	* tree-vect-loop.c (vect_analyze_loop_operations): Add 	vectorizable cycles in hybrid SLP check. 	* tree-vect-slp.c (vect_detect_hybrid_slp_stmts): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156800 138bc75d-0d04-0410-961f-82ee72b054a4